<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    tools:context=".ui.showItem.MainActivityShowItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/white1_initial"
            app:collapseIcon="@drawable/ic_arrow_back_black_24dp"
            app:titleTextColor="@color/black" />


        <androidx.cardview.widget.CardView
            android:id="@+id/external_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="@dimen/margin_padding_20"
            android:layout_marginTop="@dimen/margin_padding_6"
            android:layout_marginRight="@dimen/margin_padding_20"
            android:layout_marginBottom="@dimen/margin_padding_20"
            android:background="@drawable/rounded_corner"
            app:cardCornerRadius="@dimen/margin_padding_8"
            app:cardElevation="@dimen/margin_padding_1"
            app:cardMaxElevation="@dimen/margin_padding_1"
            card_view:cardElevation="0dp">

            <LinearLayout
                android:id="@+id/linear_layout_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_percent_95"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="@dimen/margin_padding_90"
                    android:layout_height="@dimen/margin_padding_90"
                    android:layout_gravity="center"
                    android:gravity="center">


                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="@dimen/margin_padding_90"
                        android:layout_height="@dimen/margin_padding_90"
                        android:background="@color/white_f1"
                        android:scaleType="center"
                        android:src="@drawable/not_avatar" />


                    <ProgressBar
                        android:id="@+id/progressBarImage"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="@dimen/margin_padding_30"
                        android:layout_height="@dimen/margin_padding_30"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:visibility="invisible" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/detailsItems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/margin_padding_7"
                    android:paddingTop="@dimen/margin_padding_5"
                    android:paddingRight="@dimen/margin_padding_5">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text="@string/app_name"
                        android:textColor="@color/black1"
                        android:textSize="@dimen/material_text_subhead"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewStatus"
                            android:layout_width="@dimen/margin_padding_20"
                            android:layout_height="@dimen/margin_padding_20"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_dot_green" />

                        <TextView
                            android:id="@+id/status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:color="@color/black1"
                            android:gravity="top"
                            android:lines="1"
                            android:minLines="1"
                            android:paddingBottom="@dimen/margin_padding_4"
                            android:textColor="@color/black1"
                            android:textSize="@dimen/material_text_subhead"
                            android:textStyle="bold"
                            tools:text="dead" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="@dimen/size_title"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewGender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_padding_10"
                            android:layout_marginLeft="@dimen/margin_padding_10"
                            android:text="@string/gender" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/margin_padding_3"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="@dimen/size_title"
                            android:layout_height="wrap_content"
                            android:text="@string/origin"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewOrigin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_padding_10"
                            android:layout_marginLeft="@dimen/margin_padding_10"
                            android:text="@string/origin" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>